Minor css fixes on mobile devices

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,7 +24,7 @@ a {
 }
 @media only screen and (max-width: 960px) {
   .default--container {
-    min-width: 650px;
+    min-width: 560px;
   }
 }
 @media only screen and (max-width: 600px) {
