--- a/src/assets/scss/wordpress.scss
+++ b/src/assets/scss/wordpress.scss
@@ -38,9 +38,9 @@ a img.aligncenter {
   margin-right: auto;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .article--content img {
-    width: 100%;
+    width: 95%;
     height: auto;
     float: none;
     margin: 0 auto;
@@ -50,7 +50,7 @@ a img.aligncenter {
 @media (max-width: 988px) {
   .wp-caption, pre code {
     /* Force the box to be 100% */
-    width: 100% !important;
+    width: 80% !important;
     margin: 0 auto !important;
     float: none !important;
   }
